test/files/neg/t4166.check
t4166.scala:3: error: super constructor arguments cannot reference unconstructed `this`
class Demo extends Base(new { Demo.this.toString }) {
                              ^
1 error
